--- a/one_page_website.html
+++ b/one_page_website.html
@@ -5,18 +5,20 @@
 		<title>Who is the best DUELIST in VALORANT?</title>
 	</head>
 	<body>
-		<h1>Who is the best DUELIST in VALORANT?</h1>
-	
+		<h1 style="color:red; background-color: black;">Who is the best DUELIST in VALORANT?</h1>
+		<link rel="stylesheet" href="main_css.css">
 		<!-- Nav -->
-		<div>
+		<nav>
 			<div>
-				<ul>
-					<a href="#phoenix" id="link"><li>PHOENIX</li></a>
-					<a href="#reyna"><li>REYNA</li></a>
-					<a href="#jett"><li>JETT</li></a>
-				</ul>
-			<div>
-		</div>
+				<div>
+					<ul>
+						<a href="#phoenix" id="link"><li>PHOENIX</li></a>
+						<a href="#reyna"><li>REYNA</li></a>
+						<a href="#jett"><li>JETT</li></a>
+					</ul>
+				<div>
+			</div>
+		</nav>
 		<!-- END NAV -->
 		
 		
@@ -27,7 +29,8 @@
 				<div>
 					<img src="./images/thumb/phoenix.png" alt="">
 					<div>
-					<p>The British Radiant utilizes his self-made flames in a variety of ways to defeat the enemy. Hailing from the U.K., Phoenix's star power shines through in his fighting style, igninting the battlefield with flash and flare.</p>
+					<p>The British Radiant utilizes his self-made flames in a variety of ways to defeat the enemy. Hailing from the U.K., 
+					Phoenix's star power shines through in his fighting style, igninting the battlefield with flash and flare.</p>
 					</div>
 				</div>
 			</div>
@@ -40,7 +43,9 @@
 				<div>
 					<img src="./images/thumb/reyna.jpg" alt="">
 					<div>
-					<p>Reyna is a Mexican Radiant and she uses her adiant abilitites in battle, which are linked to harvesting souls of the people she kills. Reyna is proud and aggresive in her nature and speech. She takes what she wants, when she wants it, no matter who stands in her way.</p>
+					<p>Reyna is a Mexican Radiant and she uses her adiant abilitites in battle, which are linked to harvesting souls of the 
+					people she kills. Reyna is proud and aggresive in her nature and speech. She takes what she wants, when she wants it, 
+					no matter who stands in her way.</p>
 					</div>
 				</div>
 			</div>
@@ -53,7 +58,9 @@
 				<div>
 					<img src="./images/thumb/jett.jpeg" alt="">
 					<div>
-					<p>Jett is a VALORANT agent who specializes in mobility and assassination. Like a true ninja, this South Korean aget can dash short distances to catch-up enemies or escape dangerous situations, and even propel herself upwards to reach highground places and surprise lurking targets who think they're safe up there.</p>
+					<p>Jett is a VALORANT agent who specializes in mobility and assassination. Like a true ninja, this South Korean aget can 
+					dash short distances to catch-up enemies or escape dangerous situations, and even propel herself upwards to reach highground 
+					places and surprise lurking targets who think they're safe up there.</p>
 					</div>
 				</div>
 			</div>
