--- a/one_page_website.html
+++ b/one_page_website.html
@@ -3,15 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Who is the best DUELIST in VALORANT?</title>
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
 	</head>
 	<body>
-		<h1 style="color:red; background-color: black;">Who is the best DUELIST in VALORANT?</h1>
-		<link rel="stylesheet" href="main_css.css">
+		<div class="header">
+			<h1>Who is the Best Duelist in Valorant?</h1>
+		</div>
+		
 		<!-- Nav -->
 		<nav>
-			<div>
-				<div>
-					<ul>
+			<div class="wrap">
+				<div class="menu-container">
+					<ul class="menu">
 						<a href="#phoenix" id="link"><li>PHOENIX</li></a>
 						<a href="#reyna"><li>REYNA</li></a>
 						<a href="#jett"><li>JETT</li></a>
@@ -30,7 +33,7 @@
 					<img src="./images/thumb/phoenix.png" alt="">
 					<div>
 					<p>The British Radiant utilizes his self-made flames in a variety of ways to defeat the enemy. Hailing from the U.K., 
-					Phoenix's star power shines through in his fighting style, igninting the battlefield with flash and flare.</p>
+					<strong>Phoenix's</strong> star power shines through in his fighting style, igninting the battlefield with flash and flare.</p>
 					</div>
 				</div>
 			</div>
@@ -43,7 +46,7 @@
 				<div>
 					<img src="./images/thumb/reyna.jpg" alt="">
 					<div>
-					<p>Reyna is a Mexican Radiant and she uses her adiant abilitites in battle, which are linked to harvesting souls of the 
+					<p><strong>Reyna</strong> is a Mexican Radiant and she uses her adiant abilitites in battle, which are linked to harvesting souls of the 
 					people she kills. Reyna is proud and aggresive in her nature and speech. She takes what she wants, when she wants it, 
 					no matter who stands in her way.</p>
 					</div>
@@ -58,7 +61,7 @@
 				<div>
 					<img src="./images/thumb/jett.jpeg" alt="">
 					<div>
-					<p>Jett is a VALORANT agent who specializes in mobility and assassination. Like a true ninja, this South Korean aget can 
+					<p><strong>Jett</strong> is a VALORANT agent who specializes in mobility and assassination. Like a true ninja, this South Korean aget can 
 					dash short distances to catch-up enemies or escape dangerous situations, and even propel herself upwards to reach highground 
 					places and surprise lurking targets who think they're safe up there.</p>
 					</div>
