--- a/one_page_website.html
+++ b/one_page_website.html
@@ -2,76 +2,67 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Who is the best DUELIST in VALORANT?</title>
 		<link rel="stylesheet" href="./CSS/one_page_website.css">
 	</head>
 	<body>
-		<div class="header">
-			<h1>Who is the Best Duelist in Valorant?</h1>
+		<h1>Who is the best Duelist in Valorant?</h1>
+
+		<div class="row">
+			<div class="column">
+				<img src="./images/thumb/phoenix_small.jpg" style="width: 100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+			</div>
+			<div class="column">
+				<img src="./images/thumb/reyna_small.jpg" style="width: 100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+			</div>
+			<div class="column">
+				<img src="./images/thumb/jett_small.jpeg" style="width: 100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+			</div>
 		</div>
 		
-		<!-- Nav -->
-		<nav>
-			<div class="wrap">
-				<div class="menu-container">
-					<ul class="menu">
-						<a href="#phoenix" id="link"><li>PHOENIX</li></a>
-						<a href="#reyna"><li>REYNA</li></a>
-						<a href="#jett"><li>JETT</li></a>
-					</ul>
-				<div>
-			</div>
-		</nav>
-		<!-- END NAV -->
 		
-		
-		
-		<!-- PHOENIX PHOTO -->
-		<div id="phoenix">
-			<div>
-				<div>
-					<img src="./images/thumb/phoenix.png" alt="">
-					<div>
-					<p>The British Radiant utilizes his self-made flames in a variety of ways to defeat the enemy. Hailing from the U.K., 
-					<strong>Phoenix's</strong> star power shines through in his fighting style, igninting the battlefield with flash and flare.</p>
-					</div>
+		<!--The Modal/Lightbox-->
+		<div id="myModal" class="modal">
+			<span class="close cursor" onclick="closeModal()">&times;</span>
+			<div class="modal-content">
+
+				<div class="mySlides">
+					<div class="numbertext">1/3</div>
+					<img src="./images/thumb/phoenix.png" style="width: 100%;">
 				</div>
-			</div>
-		</div>
-		<!-- END PHOENIX PHOTO -->
-		
-		<!-- REYNA PHOTO -->
-		<div id="reyna">
-			<div>
-				<div>
-					<img src="./images/thumb/reyna.jpg" alt="">
-					<div>
-					<p><strong>Reyna</strong> is a Mexican Radiant and she uses her adiant abilitites in battle, which are linked to harvesting souls of the 
-					people she kills. Reyna is proud and aggresive in her nature and speech. She takes what she wants, when she wants it, 
-					no matter who stands in her way.</p>
-					</div>
+
+				<div class="mySlides">
+					<div class="numbertext">2/3</div>
+					<img src="./images/thumb/reyna.jpg" style="width: 100%;">
 				</div>
-			</div>
-		</div>
-		<<!-- END OF REYNA PHOTO -->
-		
-		<!-- JETT PHOTO -->
-		<div id="jett">
-			<div>
-				<div>
-					<img src="./images/thumb/jett.jpeg" alt="">
-					<div>
-					<p><strong>Jett</strong> is a VALORANT agent who specializes in mobility and assassination. Like a true ninja, this South Korean aget can 
-					dash short distances to catch-up enemies or escape dangerous situations, and even propel herself upwards to reach highground 
-					places and surprise lurking targets who think they're safe up there.</p>
-					</div>
+
+				<div class="mySlides">
+					<div class="numbertext">3/3</div>
+					<img src="./images/thumb/jett.jpeg" style="width: 100%;">
 				</div>
+
+				<!--Next/previous controls-->
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+				<!--Thumbnail image control-->
+				<div class="column">
+					<img class="demo" src="./images/thumb/phoenix.png" onclick="currentSlide(1)" alt="Phoenix">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="./images/thumb/reyna.jpg" onclick="currentSlide(2)" alt="Reyna">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="./images/thumb/jett.jpeg" onclick="currentSlide(3)" alt="Jett">
+				</div>
+
 			</div>
 		</div>
-		<!-- END JETT PHOTO -->
 		
-		
-		
+		<script src="./JS/one_page_website.js"></script>
 	</body>
 </html>
 	
